- Another fix with embedded objects
- Non-textframes can have borders too now

Reggie, 26.1.1999:
------------------
- Added saving/loading hard frame breaks (seems that I forgot that...)
- Frame-Margins work now (only the dialog for setting them is missing :-)
- Fixed some memory leak producing code (I haaaaaate destructors)
- Some fixes with drawing borders of frames, but this is still not correct

Reggie, 27.1.1999:
------------------
- Improved drawing frame borders again (now the PS output looks ok too)
- More error checking when inserting tables
- Now multiple frames/framesets can be configured using the dialog at the same time
- Added tab in the frame/frameset settings dialog for geometry (fram coordinates + frame margins)
- It's possible to set and modify frame coordinates and margins using the dialog now
- Tables have a default margin of 2 pts.

Reggie, 28.1.1999:
------------------
- Fixes when loading documents
- It's possible to set the linespacing using the toolbar now
- Fixed drawing paragraph borders
- Some other small fixes
- Frame/Frameset dialog can be opened using the menu now too
- Some speed imporvements when ptWidth < rastX because of overlapping frames

Reggie, 29-30.1.1999:
---------------------
- All values in KWord can be given in inch, mm or pt now. For that I had to quite big changes and change
the file format a bit, but old files can still be loaded
- Switching to another unit is currently only possible with a right click on the ruler and choosing
  the unit in the popup menu there
- Fixes with printing (textframes with num > 0 on pages > 0 were not printed)

Reggie, 31.1.1999:
------------------
- Some small cleanups und fixes
- Fixes with loading old kword files
- More fixes with printing
- Many fixes with drawing frame borders, headers/footers, etc.
- Fixes with automatically adding new pages
- Fixes with inserting new frames

Reggie, 1.2.1999:
-----------------
- Started with internal stuff for variables (pagenum, date, etc.)