@@ -12,17 +12,19 @@ kword_bin_SOURCES = char.cc kword_main.cc kword_doc.cc kword_view.cc kword.cc kw
 		fc.cc font.cc format.cc kword_page.cc parag.cc paraglayout.cc \
 		formatcollection.cc paragdia.cc imagecollection.cc image.cc \
 		formats.cc frame.cc framedia.cc stylist.cc kcharselect.cc kcharselectdia.cc \
-		kword_utils.cc searchdia.cc preview.cc tabledia.cc insdia.cc deldia.cc variable.cc
+		kword_utils.cc searchdia.cc preview.cc tabledia.cc insdia.cc deldia.cc variable.cc \
+		docstruct.cc
 
 noinst_HEADERS = char.h kword_main.h kword_doc.h kword_view.h kword.h kword_shell.h \
 		fc.h font.h format.h kword_page.h parag.h paraglayout.h \
 		formatcollection.h paragdia.h imagecollection.h image.h \
 		formats.h frame.h framedia.h stylist.h  kcharselect.h kcharselectdia.h \
-		kword_utils.h searchdia.h preview.h tabledia.h insdia.h deldia.h variable.h
+		kword_utils.h searchdia.h preview.h tabledia.h insdia.h deldia.h variable.h \
+		docstruct.h
 
 METASOURCES =	kword_main.moc kword_view.moc kword_doc.moc kword_shell.moc paragdia.moc \
 		kword_page.moc framedia.moc stylist.moc kcharselect.moc kcharselectdia.moc \
-		searchdia.moc tabledia.moc insdia.moc deldia.moc
+		searchdia.moc tabledia.moc insdia.moc deldia.moc docstruct.moc
 
 DISTCLEANFILES = $(idl_DATA:.idl=.cc) $(idl_HEADERS) $(METASOURCES)
 
@@ -70,3 +72,4 @@ insdia.cc: insdia.h
 tabledia.cc: tabledia.h
 deldia.cc: deldia.h
 variable.cc: variable.h
+docstruct.cc: docstruct.h 
